--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -85,6 +85,7 @@
 </div>
 <script>
     // Login Functionality
+
     document.getElementById('login-form').addEventListener('submit', function (e) {
         e.preventDefault();
 
@@ -110,12 +111,21 @@
                 return response.json();
             })
             .then(data => {
+                role = data.role ?? "user"
                 // Store tokens in localStorage
                 localStorage.setItem('access_token', data.access);
                 localStorage.setItem('refresh_token', data.refresh);
                 localStorage.setItem('username', data.username);
+                localStorage.setItem('role', data.role ?? "user");
                 // Redirect to dashboard
-                window.location.href = "/";
+                if (role == 'user') {
+                    window.location.href = "/";
+                } else if (role == 'admin') {
+                    window.location.href = "/";
+                } else {
+                    window.location.href = "/";
+                }
+
             })
             .catch(error => {
                 errorText.textContent = 'Invalid username or password';
