Connect Admin path to Autehntication app

--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -121,7 +121,7 @@
                 if (role == 'user') {
                     window.location.href = "/";
                 } else if (role == 'admin') {
-                    window.location.href = "/";
+                    window.location.href = "/admin-system/dashboard";
                 } else {
                     window.location.href = "/";
                 }
