--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=U, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <title>{% block title %}{% endblock %}</title>
 </head>
