--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -73,7 +73,7 @@
 
             <!-- Main Content Area -->
             <div class="flex-1 flex items-center justify-center">
-                <div class="w-5/6 h-5/6 bg-base-100 shadow-2xl p-6 rounded-xl p-4">
+                <div class="w-5/6 h-5/6 bg-base-100 shadow-2xl p-6 rounded-xl">
                     <!-- Your content inside the box -->
                     {% block content %} {% endblock %}
                 </div>
