--- a/myadmin/templates/reports.html
+++ b/myadmin/templates/reports.html
@@ -1,4 +1,71 @@
 {% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
 {% block heading %}Reports{% endblock %} {% block content %}
-<h1>Report</h1>
+<div class="flex flex-row justify-between">
+    <div class="flex flex-col">
+        <div class="text-xl font-bold">Report</div>
+    </div>
+    <div>
+        <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
+    </div>
+</div>
+<div class="overflow-x-auto overflow-y-auto mt-8" style="max-height: calc(100% - 80px)">
+    <table class="table">
+        <!-- head -->
+        <thead>
+            <tr>
+                <th>Powerplant</th>
+                <th>Name</th>
+                <th>Reporter</th>
+                <th>Total Power</th>
+                <th>Uploaded Date</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- row 1 -->
+
+            <!-- row 2 -->
+            <tr class="hover:bg-base-300">
+                <td>1</td>
+                <td>PP1_25FEB2025</td>
+                <td>jayyyy2257</td>
+                <td>220</td>
+                <td>
+                    25/02/68
+                </td>
+                <td>
+                    <button class="btn btn-soft btn-info">View Detail</button>
+                </td>
+            </tr>
+
+            <tr class="hover:bg-base-300">
+                <td>1</td>
+                <td>PP1_24FEB2025</td>
+                <td>melnyks</td>
+                <td>220</td>
+                <td>
+                    25/02/68
+                </td>
+                <td>
+                    <button class="btn btn-soft btn-info">View Detail</button>
+                </td>
+            </tr>
+
+            <tr class="hover:bg-base-300">
+                <td>2</td>
+                <td>PP1_23FEB2025</td>
+                <td>yuutoutopia</td>
+                <td>120</td>
+                <td>
+                    25/02/68
+                </td>
+                <td>
+                    <button class="btn btn-soft btn-info">View Detail</button>
+                </td>
+            </tr>
+
+
+        </tbody>
+    </table>
+</div>
 {% endblock%}
