--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="pl-4">
                         <div class="flex flex-col">
-                            <div class="text-lg font-bold">PengPeng</div>
+                            <div class="text-lg font-bold {% if request.path == '/admin-system/profile/' %} text-orange-500 font-bold{% endif %}">PengPeng</div>
                             <div class="text-xs text-gray-900">Admin</div>
                         </div>
                     </div>
