adjust ring on profilr picture

--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Add Tailwind and DaisyUI via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet">
     <!-- Your custom CSS -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
