--- a/myadmin/templates/profile.html
+++ b/myadmin/templates/profile.html
@@ -17,10 +17,12 @@
         <img src="../../static/solar-profile.png" alt="solar-profile" class="w-[1550px] h-64 rounded-b-3xl">
     </div> 
     <div class="avatar flex justify-self-end">
-        <div class="ring-primary ring-offset-base-100 w-64 rounded-full ring ring-offset-2 -translate-y-[450px] relative mr-48 z-30">
-          <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+        <div class="w-64 h-64 rounded-full ring-2 ring-[#000000] -translate-y-[450px] relative mr-48 z-30 p-1">
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" class="w-full h-full rounded-full" />
         </div>
+        
     </div>
+    
     <div class="flex justify-self-end -translate-y-[450px] relative mr-[275px] mt-6">
         <div class="bg-[#9bebd8] border-2 border-[#00B087] text-[#008767] px-6 py-2 rounded-lg text-center ">
             <p>Active</p>
