change profile pic same as figma

--- a/myadmin/templates/profile.html
+++ b/myadmin/templates/profile.html
@@ -18,7 +18,7 @@
     </div> 
     <div class="avatar flex justify-self-end">
         <div class="w-64 h-64 rounded-full ring-2 ring-[#000000] -translate-y-[450px] relative mr-48 z-30 p-1">
-            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" class="w-full h-full rounded-full" />
+            <img src="../../static/Profile.png" class="w-full h-full rounded-full" />
         </div>
         
     </div>
