--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -24,7 +24,7 @@
                     <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
                         <div class="w-10 rounded-full">
                             <img alt="Tailwind CSS Navbar component"
-                                src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                                src="../../static/Profile.png" />
                         </div>
                     </div>
                     <div class="pl-4">
